@startuml

title __TRIANGLE's Class Diagram__\n
    class fr.projava.triangle.Controllers.AccountController {
    }


    class fr.projava.triangle.Controllers.ConversationController {
    }


    class fr.projava.triangle.Controllers.DatabaseController {
    }


    class fr.projava.triangle.Controllers.NetworkController {
    }
  

    class fr.projava.triangle.Controllers.ThreadController {
    }

    class fr.projava.triangle.Launcher {
    }

    class fr.projava.triangle.Models.MThread {
    }


    class fr.projava.triangle.Models.Message {
    }
  

    class fr.projava.triangle.Models.User {
    }
  

    class fr.projava.triangle.Objects.MessageObject {
    }

    class fr.projava.triangle.Objects.UserObject {
    }

  

    class fr.projava.triangle.Observers.ConnectedUsersObserver {
    }


    interface fr.projava.triangle.Observers.Observer {
    }


    class fr.projava.triangle.Observers.ReceivedMessageObserver {
    }


    class fr.projava.triangle.Observers.Subject {
    }


    class fr.projava.triangle.Views.AuthWindowController {
    }


    class fr.projava.triangle.Views.ChatWindowController {
    }


  class fr.projava.triangle.mainApp {
  }


  fr.projava.triangle.Models.MThread o-- fr.projava.triangle.Models.User : receiver
  fr.projava.triangle.Models.MThread o-- fr.projava.triangle.Models.User : sender
  fr.projava.triangle.Objects.MessageObject -up-|> javafx.scene.control.Label
  fr.projava.triangle.Objects.UserObject -up-|> javafx.scene.control.Button
  fr.projava.triangle.Objects.UserObject o-- fr.projava.triangle.Models.User : user
  fr.projava.triangle.Observers.ConnectedUsersObserver .up.|> fr.projava.triangle.Observers.Observer
  fr.projava.triangle.Observers.ConnectedUsersObserver o-- fr.projava.triangle.Views.ChatWindowController : cwc
  fr.projava.triangle.Observers.ReceivedMessageObserver .up.|> fr.projava.triangle.Observers.Observer
  fr.projava.triangle.Observers.ReceivedMessageObserver o-- fr.projava.triangle.Views.ChatWindowController : cwc
  fr.projava.triangle.Views.ChatWindowController .up.|> javafx.fxml.Initializable
  fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.ConnectedUsersObserver : connectedUsersObserver
  fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.ReceivedMessageObserver : receivedMessageObserver
  fr.projava.triangle.Views.ChatWindowController o-- fr.projava.triangle.Observers.Subject : subject
  fr.projava.triangle.mainApp -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
